added final trans